#246251 - Documentation not loading on Windows - part 2